--- a/akman-server/pom.xml
+++ b/akman-server/pom.xml
@@ -11,10 +11,10 @@
   <artifactId>akman-server</artifactId>
   <packaging>jar</packaging>
 
-  <name>org.auspicacious.akman.akman-server</name>
+  <name>org.auspicacious.akman:akman-server</name>
 
   <properties>
-    <tomcat.version>9.0.12</tomcat.version>
+    <tomcat.version>9.0.14</tomcat.version>
   </properties>
 
   <dependencies>
@@ -22,11 +22,6 @@
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-core</artifactId>
       <version>${tomcat.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.errorprone</groupId>
-      <artifactId>error_prone_core</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.github.spotbugs</groupId>
@@ -37,10 +32,29 @@
       <artifactId>akman-lib</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <!-- Test scope -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.14.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Provided scope -->
+    <dependency>
+      <groupId>com.google.errorprone</groupId>
+      <artifactId>error_prone_core</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
-    <finalName>embeddedTomcatSample</finalName>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
